# ANRO

./: .ICEauthority  .bash_history  README.md  dokument.txt
.cache/: event-sound-cache.tdb.a2a302b71fae403090c7be0bbc31263b.x86_64-pc-linux-gnu  event-sound-cache.tdb.d8d6d7d357e644099b37e4f3e17e453f.x86_64-pc-linux-gnu
.cache/fontconfig/: a41116dafaf8b233ac2c61cb73f2ea5f-le64.cache-6
.cache/ibus/bus/: registry
.cache/tracker/: last-crawl.txt  meta.db  meta.db-shm  meta.db-wal
.config/QtProject/: QtCreator.db  QtCreator.ini
.config/QtProject/qtcreator/: cmaketools.xml  debuggers.xml  default.qws  devices.xml  helpcollection.qhc  profiles.xml  qtversion.xml  toolchains.xml
.config/dconf/: .nfs0000000080a27e3d00000005  .nfs000000008a31211f00000024  .nfs000000008a3a810b0000003a  user
.config/goa-1.0/: accounts.conf
.config/gtk-3.0/: bookmarks
.config/ibus/bus/: a2a302b71fae403090c7be0bbc31263b-unix-1  d8d6d7d357e644099b37e4f3e17e453f-unix-1
.config/pulse/: a2a302b71fae403090c7be0bbc31263b-card-database.tdb  cookie  d8d6d7d357e644099b37e4f3e17e453f-device-volumes.tdb
.config/ros.org/: rqt_gui.ini
.gnupg/: pubring.kbx  trustdb.gpg
.local/share/: gsettings-data-convert  recently-used.xbel  session_migration-gnome
.local/share/gnome-shell/: application_state
.local/share/gvfs-metadata/: .nfs000000028687943a00000022  .nfs0000000286879c0e00000001  .nfs000000028ad6c4320000004c  .nfs000000028ad88b0a00000033  root
.local/share/icc/: edid-2adf9a1c43255eae90adb6c21feade62.icc  edid-2c4bdb09f56b4066eecc421bee77829f.icc  edid-67aafdb2483ac7abdd905e5c51359236.icc  edid-dd54bb8017cfb1b476ed2804fd6bdfa8.icc
.local/share/keyrings/: login.keyring  user.keystore
.local/share/xorg/: Xorg.1.log.old
.mozilla/firefox/: profiles.ini
.mozilla/firefox/6rpe5xl2.default/: SiteSecurityServiceState.txt  addonStartup.json.lz4  addons.json  cert9.db  cookies.sqlite  cookies.sqlite-shm  cookies.sqlite-wal  extensions.json  favicons.sqlite-shm  favicons.sqlite-wal  formhistory.sqlite  key4.db  kinto.sqlite  lock  pkcs11.txt  places.sqlite-shm  places.sqlite-wal  prefs.js  search.json.mozlz4  serviceworker.txt  shield-preference-experiments.json  times.json  webappsstore.sqlite  webappsstore.sqlite-shm  webappsstore.sqlite-wal  xulstore.json
.mozilla/firefox/Crash Reports/: InstallTime20180208175058
.ros/: rospack_cache_09616386662936756772  rospack_cache_11134725904490598093
.ros/log/: latest
anro18l-rawicki-niedzielski/lab1/devel/: .catkin  setup.sh
lab1/devel/: .rosinstall  _setup_util.py
lab2/devel/: .catkin  .rosinstall  setup.sh
lab2/docs/: ramie.gv
lab2/src/ramie/: CMakeLists.txt
lab2/src/ramie/launch/: test.launch
lab2/src/ramie/rviz/: urdf.rviz
lab2/src/ramie/src/: parser.cpp
lab2/src/ramie/urdf/: elegancki.urdf  ramie.gv
lab3/ramie/: CMakeLists.txt  elegancki.urdf  non.cpp  package.xml
lab3/ramie/launch/: botch.launch  display.launch  kdl.launch  nonkdl.launch  static.launch  test.launch
lab3/ramie/rviz/: both.rviz
lab3/ramie/src/: kdl.cpp  non.cpp  nonkdl.cpp  parser.cpp
lab3/ramie/urdf/: elegancki.urdf
lab4/ramie/: CMakeLists.txt  package.xml
lab4/ramie/include/: interpolation.hpp  (+1 more)
lab5/ramie/: CMakeLists.txt
lab5/ramie/include/: interpolation.hpp  oint_interpolation.hpp
lab5/ramie/launch/: inverse.launch  lab5.launch  oint.launch  start.launch  test.launch
lab5/ramie/launch/not_in_usage/: nonkdl.launch  teststatic.launch
lab5/ramie/rviz/: both.rviz  kdl.rviz  nonkdl.rviz
lab5/ramie/src/: control.cpp  inverse1.cpp  inverse_service.cpp  jint.cpp  kdl.cpp  lab5_oint.cpp
lab5/ramie/srv/: inverse.srv  invser.srv
lab5/ramie/urdf/: static.urdf
turtle/: CMakeLists.txt  package.xml
turtle/launch/: launch.launch
(+2163 files in other folders)
